--- a/AutoScheduler/Base.lproj/Main.storyboard
+++ b/AutoScheduler/Base.lproj/Main.storyboard
@@ -550,19 +550,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e5x-mf-NHz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e5x-mf-NHz">
                                 <rect key="frame" x="20" y="72" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HrO-sH-WdQ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HrO-sH-WdQ">
                                 <rect key="frame" x="20" y="108" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3L-xd-8sT">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3L-xd-8sT">
                                 <rect key="frame" x="20" y="150" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -570,6 +570,17 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.80000000000000004" green="0.75686274509999996" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="HrO-sH-WdQ" firstAttribute="top" secondItem="e5x-mf-NHz" secondAttribute="bottom" constant="15" id="0BQ-zR-aKr"/>
+                            <constraint firstItem="c3L-xd-8sT" firstAttribute="trailing" secondItem="e5s-bc-wqj" secondAttribute="trailingMargin" id="20s-cT-BMl"/>
+                            <constraint firstItem="e5x-mf-NHz" firstAttribute="leading" secondItem="HrO-sH-WdQ" secondAttribute="leading" id="6fh-Pe-dQW"/>
+                            <constraint firstItem="e5x-mf-NHz" firstAttribute="top" secondItem="eDW-I5-fGS" secondAttribute="bottom" constant="8" symbolic="YES" id="Ddb-LR-TLh"/>
+                            <constraint firstItem="c3L-xd-8sT" firstAttribute="top" secondItem="HrO-sH-WdQ" secondAttribute="bottom" constant="21" id="cnt-gD-Gq5"/>
+                            <constraint firstItem="c3L-xd-8sT" firstAttribute="leading" secondItem="e5s-bc-wqj" secondAttribute="leadingMargin" id="dxQ-Ue-xda"/>
+                            <constraint firstItem="c3L-xd-8sT" firstAttribute="trailing" secondItem="HrO-sH-WdQ" secondAttribute="trailing" id="gHi-nB-vzR"/>
+                            <constraint firstItem="e5x-mf-NHz" firstAttribute="trailing" secondItem="HrO-sH-WdQ" secondAttribute="trailing" id="lgg-7b-Yzt"/>
+                            <constraint firstItem="c3L-xd-8sT" firstAttribute="leading" secondItem="HrO-sH-WdQ" secondAttribute="leading" id="uYb-9s-FeD"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7F7-Kp-uSh">
                         <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" id="f7G-ne-aGg"/>
@@ -590,7 +601,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eWW-lk-leQ" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3609" y="-2531"/>
+            <point key="canvasLocation" x="4225" y="-2581"/>
         </scene>
         <!--Projects-->
         <scene sceneID="DLZ-ME-OC3">
