--- a/AutoScheduler/Base.lproj/Main.storyboard
+++ b/AutoScheduler/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7xB-sN-UuH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7xB-sN-UuH">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -47,7 +47,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="r0D-uy-U2N" kind="show" id="OLN-sZ-LRl"/>
+                                    <segue destination="A1n-u8-KZb" kind="show" id="OLN-sZ-LRl"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="headTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d3u-uT-gLZ">
@@ -129,7 +129,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="am3-PM-WkB">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="am3-PM-WkB">
                                 <rect key="frame" x="207" y="306" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="GcZ-nV-myZ"/>
@@ -137,7 +137,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dfH-mK-6FQ">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dfH-mK-6FQ">
                                 <rect key="frame" x="207" y="344" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Tq8-my-Erv"/>
@@ -145,7 +145,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQq-MI-KAM">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQq-MI-KAM">
                                 <rect key="frame" x="207" y="268" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="PaP-WQ-tfR"/>
@@ -153,7 +153,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xjz-K0-KWg">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xjz-K0-KWg">
                                 <rect key="frame" x="207" y="230" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DJn-qf-teK"/>
@@ -161,7 +161,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FAF-og-i93">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FAF-og-i93">
                                 <rect key="frame" x="207" y="192" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="csh-Ex-m4X"/>
@@ -169,10 +169,10 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cCN-fD-ox0" userLabel="Language">
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCN-fD-ox0" userLabel="Language">
                                 <rect key="frame" x="207" y="382" width="186" height="72"/>
                             </pickerView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ON5-Nh-pIq">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ON5-Nh-pIq">
                                 <rect key="frame" x="207" y="154" width="186" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="186" id="0l6-lk-SYf"/>
@@ -210,10 +210,11 @@
                             <constraint firstItem="eQq-MI-KAM" firstAttribute="top" secondItem="Xjz-K0-KWg" secondAttribute="bottom" constant="8" symbolic="YES" id="yr6-SP-ETf"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Register New Account" id="SR7-Vv-G7K"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gUc-gq-V9M" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1059" y="-1355"/>
+            <point key="canvasLocation" x="1871" y="-1355"/>
         </scene>
         <!--Login-->
         <scene sceneID="aHX-qN-4kl">
@@ -294,7 +295,7 @@
                             <constraint firstItem="9ov-We-YGp" firstAttribute="top" secondItem="4I9-Wg-uW9" secondAttribute="bottom" constant="13" id="ytw-D3-k5m"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="PcY-1c-CmY"/>
+                    <navigationItem key="navigationItem" title="Login View" id="PcY-1c-CmY"/>
                     <connections>
                         <outlet property="ASLogin" destination="9ov-We-YGp" id="rPd-cM-PGx"/>
                         <outlet property="ASPasswordField" destination="4I9-Wg-uW9" id="u9a-7F-PIY"/>
@@ -536,7 +537,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1860" y="-763"/>
+            <point key="canvasLocation" x="2672" y="-763"/>
         </scene>
         <!--HomeViewController-->
         <scene sceneID="aLW-BE-NmD">
@@ -582,7 +583,7 @@
                             <constraint firstItem="c3L-xd-8sT" firstAttribute="leading" secondItem="HrO-sH-WdQ" secondAttribute="leading" id="uYb-9s-FeD"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="7F7-Kp-uSh">
+                    <navigationItem key="navigationItem" title="Home" id="7F7-Kp-uSh">
                         <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" id="f7G-ne-aGg"/>
                         <barButtonItem key="rightBarButtonItem" title="Sign out" id="y7v-qD-Plz">
                             <connections>
@@ -658,7 +659,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aTu-0n-0tZ" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4185" y="-1419"/>
+            <point key="canvasLocation" x="4997" y="-1419"/>
         </scene>
         <!--Project Details-->
         <scene sceneID="wCa-t8-PHA">
@@ -786,7 +787,7 @@
                             <constraint firstItem="kug-aX-0EP" firstAttribute="trailing" secondItem="zH0-35-gkL" secondAttribute="trailingMargin" id="wOZ-dg-RI0"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="NUy-iK-ahw">
+                    <navigationItem key="navigationItem" title="New Project" id="NUy-iK-ahw">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="oDt-Y8-I4H">
                             <connections>
                                 <action selector="cancel:" destination="whz-ff-qrV" id="6jh-zF-wu5"/>
@@ -807,7 +808,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uPv-qZ-yZZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5782" y="-1442"/>
+            <point key="canvasLocation" x="6594" y="-1442"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="V7o-FD-iFa">
@@ -825,7 +826,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pg7-qc-axf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3429" y="-1419"/>
+            <point key="canvasLocation" x="4241" y="-1419"/>
         </scene>
         <!--Issues-->
         <scene sceneID="wBp-V7-Jry">
@@ -878,7 +879,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O3F-nB-Y92" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4193" y="-723"/>
+            <point key="canvasLocation" x="5005" y="-723"/>
         </scene>
         <!--Issue Details-->
         <scene sceneID="dXz-n6-4H9">
@@ -977,7 +978,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x1N-xT-ulv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5103" y="-763"/>
+            <point key="canvasLocation" x="5915" y="-763"/>
         </scene>
         <!--GanntChart-->
         <scene sceneID="Hbh-E6-8Po">
@@ -1086,7 +1087,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a8H-dp-q2b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3381" y="-723"/>
+            <point key="canvasLocation" x="4193" y="-723"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bkQ-yQ-raD">
@@ -1305,7 +1306,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ge2-3t-zZQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8279" y="-1196"/>
+            <point key="canvasLocation" x="9091" y="-1196"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="rOj-Ir-O8L">
@@ -1477,7 +1478,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dok-DR-fRM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4970" y="-1442"/>
+            <point key="canvasLocation" x="5782" y="-1442"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="F14-zs-1RM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="A1n-u8-KZb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nO0-Fe-Uq7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="r0D-uy-U2N" kind="relationship" relationship="rootViewController" id="mo5-qt-6aV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e44-0d-Uqw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1059" y="-1355"/>
         </scene>
     </scenes>
     <resources>
