--- a/AutoScheduler/Base.lproj/Main.storyboard
+++ b/AutoScheduler/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7xB-sN-UuH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7xB-sN-UuH">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -230,8 +230,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4I9-Wg-uW9">
+                                <rect key="frame" x="207" y="285" width="186" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Bw1-KU-YwC">
+                                <rect key="frame" x="207" y="247" width="186" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="186" id="LE0-49-9Dm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="headTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ov-We-YGp">
-                                <rect key="frame" x="207" y="325" width="186" height="30"/>
+                                <rect key="frame" x="207" y="323" width="186" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Login">
@@ -247,54 +260,17 @@
                                     <action selector="ASLogin:" destination="PsI-pP-n4s" eventType="touchUpInside" id="shk-eh-Ww7"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4I9-Wg-uW9">
-                                <rect key="frame" x="207" y="282" width="186" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bw1-KU-YwC">
-                                <rect key="frame" x="207" y="244" width="186" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="186" id="Kxa-Sg-GNb"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="headTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6C-vY-fFq">
-                                <rect key="frame" x="207" y="363" width="112" height="48"/>
-                                <color key="backgroundColor" red="0.80000000000000004" green="0.75686274509999996" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="112" id="6q4-mO-3tr"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <state key="normal">
-                                    <string key="title">Lost password?
-</string>
-                                    <color key="titleColor" red="0.25098039220000001" green="0.19215686269999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <segue destination="NgO-ec-mga" kind="show" id="u5l-23-6ic"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.80000000000000004" green="0.75686274509999996" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="9ov-We-YGp" firstAttribute="leading" secondItem="4I9-Wg-uW9" secondAttribute="leading" id="13M-TO-sht"/>
-                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="leading" secondItem="4I9-Wg-uW9" secondAttribute="leading" id="46p-Uj-xq6"/>
-                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="centerX" secondItem="ejL-dI-HNc" secondAttribute="centerX" id="5nu-7X-hwW"/>
-                            <constraint firstItem="O6C-vY-fFq" firstAttribute="leading" secondItem="9ov-We-YGp" secondAttribute="leading" id="IDP-aV-WQs"/>
-                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="trailing" secondItem="4I9-Wg-uW9" secondAttribute="trailing" id="oc6-xs-cyc"/>
-                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="top" secondItem="Bw1-KU-YwC" secondAttribute="bottom" constant="8" symbolic="YES" id="qbM-Fu-r5K"/>
-                            <constraint firstItem="9ov-We-YGp" firstAttribute="trailing" secondItem="4I9-Wg-uW9" secondAttribute="trailing" id="rNZ-pG-9Po"/>
-                            <constraint firstItem="ChC-5j-kUx" firstAttribute="top" secondItem="O6C-vY-fFq" secondAttribute="bottom" constant="189" id="sMT-Rf-uGc"/>
-                            <constraint firstItem="O6C-vY-fFq" firstAttribute="top" secondItem="9ov-We-YGp" secondAttribute="bottom" constant="8" symbolic="YES" id="tYn-rt-WCw"/>
-                            <constraint firstItem="9ov-We-YGp" firstAttribute="top" secondItem="4I9-Wg-uW9" secondAttribute="bottom" constant="13" id="ytw-D3-k5m"/>
+                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="trailing" secondItem="4I9-Wg-uW9" secondAttribute="trailing" id="1qj-TE-yE7"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="trailing" secondItem="9ov-We-YGp" secondAttribute="trailing" id="M5k-LP-JFV"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="leading" secondItem="9ov-We-YGp" secondAttribute="leading" id="NNE-1W-bmu"/>
+                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="leading" secondItem="4I9-Wg-uW9" secondAttribute="leading" id="QGA-bC-5UO"/>
+                            <constraint firstItem="Bw1-KU-YwC" firstAttribute="centerX" secondItem="ejL-dI-HNc" secondAttribute="centerX" id="SU6-Xj-gUk"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="top" secondItem="Bw1-KU-YwC" secondAttribute="bottom" constant="8" symbolic="YES" id="aF9-ns-uYa"/>
+                            <constraint firstItem="9ov-We-YGp" firstAttribute="top" secondItem="4I9-Wg-uW9" secondAttribute="bottom" constant="8" symbolic="YES" id="go2-Dv-UyV"/>
+                            <constraint firstItem="4I9-Wg-uW9" firstAttribute="centerY" secondItem="ejL-dI-HNc" secondAttribute="centerY" id="jVk-LW-H2C"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Login View" id="PcY-1c-CmY"/>
@@ -1005,7 +981,7 @@
         <!--GanntChart-->
         <scene sceneID="Hbh-E6-8Po">
             <objects>
-                <viewController title="GanntChart" id="9am-uB-K9t" customClass="GanttChartViewController" sceneMemberID="viewController">
+                <viewController title="GanntChart" automaticallyAdjustsScrollViewInsets="NO" id="9am-uB-K9t" customClass="GanttChartViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xMa-5V-BP6"/>
                         <viewControllerLayoutGuide type="bottom" id="Hrj-2f-iig"/>
@@ -1024,10 +1000,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jFd-8w-LO8" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5169" y="53"/>
+            <point key="canvasLocation" x="5103" y="61"/>
         </scene>
         <!--calendar-->
         <scene sceneID="jo0-LS-jXm">
@@ -1556,7 +1533,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zom-ic-hWX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7334" y="53"/>
+            <point key="canvasLocation" x="7518" y="37"/>
         </scene>
     </scenes>
     <resources>
